# jj-run

./: CHANGELOG.md  README.md  jj-run.py  mise.toml  pyproject.toml  test1.py  test2.py  test_fatal.py  test_stop.py
src/jj_run/: main.py
test/: test1.py  test2.py  test_fatal.py  test_stop.py
