[project]
name = "jj-run"
version = "0.0.0"
dependencies = []
requires-python = ">=3.8"

[project.scripts]
jj-run = "jj_run.main:main"

[dependency-groups]
dev = ["pyright>=1.1.402", "ruff>=0.12.2", "pytest-timeout>=2.4.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src", "tests"]

[tool.autoimport]
disable_move_to_top = true
